--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
+    "nodemon": "^1.12.1",
     "serve-favicon": "~2.4.2",
     "sync-request": "^4.1.0",
     "then-request": "^4.1.0"
